Update project files
